--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Matthew West: Full-Stack Web Developer. Explore my previous projects and get in touch to build your dream website!" />
+    <meta name="description" content="Matthew West: Full-Stack Web Developer in Hockley. Explore my previous projects and get in touch to build your dream website!" />
     <title>Matthew West | Freelance Web Developer in Hockley</title>
   </head>
   <body>
